Tests/Bad/Else/else1.tig
if true then a:=6 else